--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Tracking_Corona</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="planets_array">
+        <item>Mer</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+    </string-array>
+
+    <string-array name="dogs_array">
+        <item>Pug</item>
+        <item>Cavalier King Charles Spaniel</item>
+        <item>Doge</item>
+        <item>Pup</item>
+        <item>Golden</item>
+    </string-array>
 </resources>
