--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="coronavirusapplogo">coronaVirusAppLogo</string>
     <string-array name="planets_array">
         <item>Mer</item>
         <item>Venus</item>
